# system-programming-examples

./: README.md
Advanced.Programming.In.UNIX.Environment/: README.md
Advanced.Programming.In.UNIX.Environment/apue.2e/: Make.defines.linux
Advanced.Programming.In.UNIX.Environment/apue.2e/db/: linux.mk
Advanced.Programming.In.UNIX.Environment/apue.3e/threads/: Makefile  barrier.c
Advanced.Programming.In.UNIX.Environment/apue/chapter01/prog1-1/: myls.c
Advanced.Programming.In.UNIX.Environment/apue/chapter01/prog1-2/: prog1_2.c
Advanced.Programming.In.UNIX.Environment/apue/chapter01/prog1-3/: prog1_3.c
Advanced.Programming.In.UNIX.Environment/apue/chapter01/prog1-4/: getpid.c
Advanced.Programming.In.UNIX.Environment/apue/chapter01/prog1-5/: exec.c
Advanced.Programming.In.UNIX.Environment/apue/chapter01/prog1-6/: error.c
Advanced.Programming.In.UNIX.Environment/apue/chapter01/prog1-7/: prog1_7.c
Advanced.Programming.In.UNIX.Environment/apue/chapter01/prog1-8/: signal.c
Advanced.Programming.In.UNIX.Environment/apue/chapter02/prog2-1/: conf.c
Advanced.Programming.In.UNIX.Environment/apue/chapter02/prog2-2/: path_alloc.c
Advanced.Programming.In.UNIX.Environment/apue/chapter02/prog2-3/: open_max.c
Advanced.Programming.In.UNIX.Environment/apue/chapter03/prog3-1/: prog3_1.c
Advanced.Programming.In.UNIX.Environment/apue/chapter03/prog3-2/: prog3_2.c
Advanced.Programming.In.UNIX.Environment/apue/chapter03/prog3-3/: prog3_3.c
Advanced.Programming.In.UNIX.Environment/apue/chapter03/prog3-4/: prog3_4.c
Advanced.Programming.In.UNIX.Environment/apue/chapter03/prog3-5/: clr_fl.c  set_fl.c
Advanced.Programming.In.UNIX.Environment/apue/chapter04/prog4-1/: prog4_1.c
Advanced.Programming.In.UNIX.Environment/apue/chapter04/prog4-10/: prog4_10.c
Advanced.Programming.In.UNIX.Environment/apue/chapter04/prog4-2/: access.c
Advanced.Programming.In.UNIX.Environment/apue/chapter04/prog4-3/: umask.c
Advanced.Programming.In.UNIX.Environment/apue/chapter04/prog4-4/: chmod.c
Advanced.Programming.In.UNIX.Environment/apue/chapter04/prog4-5/: unlink.c
Advanced.Programming.In.UNIX.Environment/apue/chapter04/prog4-6/: utime.c
Advanced.Programming.In.UNIX.Environment/apue/chapter04/prog4-7/: dirent.c
Advanced.Programming.In.UNIX.Environment/apue/chapter04/prog4-8/: chdir.c  mycd
Advanced.Programming.In.UNIX.Environment/apue/chapter04/prog4-9/: getcwd.c
Advanced.Programming.In.UNIX.Environment/apue/chapter05/prog5-1/: prog5_1.c
Advanced.Programming.In.UNIX.Environment/apue/chapter05/prog5-2/: prog5_2.c
Advanced.Programming.In.UNIX.Environment/apue/chapter05/prog5-3/: prog5_3.c  std.out
Advanced.Programming.In.UNIX.Environment/apue/chapter05/prog5-4/: prog5_4.c
Advanced.Programming.In.UNIX.Environment/apue/chapter05/prog5-5/: tempnam.c
Advanced.Programming.In.UNIX.Environment/apue/chapter06/prog6-1/: getpwnam.c
Advanced.Programming.In.UNIX.Environment/apue/chapter07/prog7-1/: atexit.c
Advanced.Programming.In.UNIX.Environment/apue/chapter07/prog7-2/: echoarg  echoarg.c
Advanced.Programming.In.UNIX.Environment/apue/chapter07/prog7-5/: testjmp.c
Advanced.Programming.In.UNIX.Environment/apue/chapter07/prog7-7/: rlimit.c
Advanced.Programming.In.UNIX.Environment/apue/chapter08/prog8-1/: fork.c  temp.out
Advanced.Programming.In.UNIX.Environment/apue/chapter08/prog8-10/: echoarg  prog8_10.c  testinterp
Advanced.Programming.In.UNIX.Environment/apue/chapter13/: prog13_1.c
Advanced.Programming.In.UNIX.Environment/apue/test/: debug.c  getenv.c  getenv2.c
Beginning.Linux.Programming/: README.md
Beginning.Linux.Programming/blp.4e/ch04/: Makefile
Computer.Systems/: README.md
Cpp.Concurrency.In.Action/: README.md
Essentials.Of.Parallel.Computing/source/Chapter14/: .gitmodules  Dockerfile.Ubuntu20.04  Dockerfile.vnc  License.txt  Makefile  Quo_example.tgz  README.autovirtualbox  README.md  README.virtualbox  Setup.Ubuntu20.04  autovirtualbox.sh  dockerbash.sh  dockervnc.sh
Essentials.Of.Parallel.Computing/source/Chapter14/MPI/: CMakeLists.txt  MPIAffinity.c  mpirun_distrib.sh  place_report_mpi.c
Essentials.Of.Parallel.Computing/source/Chapter14/OpenMP/: CMakeLists.txt  OpenMP_Affinity.py  place_report_omp.c  place_report_omp.h  run.sh  vecadd_opt3.c
Essentials.Of.Parallel.Computing/source/Chapter15/: License.txt  Makefile  README.md
Essentials.Of.Parallel.Computing/source/Chapter15/Slurm_first_batch/: CMakeLists.txt  first_slurm_batch_job
Essentials.Of.Parallel.Computing/source/Chapter16/: Dockerfile  License.txt  Makefile  README.autovirtualbox  README.md  README.virtualbox  Setup.Ubuntu20.04  autovirtualbox.sh  docker_run.sh
Essentials.Of.Parallel.Computing/source/Chapter16/HDF5Examples/hdf5block2d/: CMakeLists.txt  hdf5_file_ops.c  hdf5_file_ops.h  hdf5block2d.c
How.Computers.Really.Work/: README.md
How.Computers.Really.Work/code/: bank.py  fac.s  fac2.c  gpiotest.py  guess.py  newfile.c  newfile.py  random.c  threader.c  vars-v2.c  vars.c  vartype.py  vending-v2.py  vending.py
How.Computers.Really.Work/code/web/: cat.js  index-v2.html  index-v3.html  index.html  style.css
Linux.In.Practice/04-process-scheduler/: sched.c  sched_nice.c
Linux.Programming.Interface/: README.md
Linux.Programming.Interface/standalone/psem/lib/: CMakeLists.txt  Makefile
Linux.Programming.Interface/standalone/pshm/: CMakeLists.txt  Makefile
Linux.Programming.Interface/standalone/pshm/lib/: test.cmake
Linux.Programming.Interface/tlpi/acl/: README.md
Linux.Programming.Interface/tlpi/pmsg/: mq_notify_thread.c  mq_notify_via_thread.c
Programming.With.POSIX.Threads/: README.md
Programming.With.POSIX.Threads/src/: Makefile  pthread_rwlock_main.c
UNIX.Systems.Programming/: README.md
Understanding.UNIX.Linux.Programming/: README.md
(+137 files in other folders)
